[project]
name = "newsfeed"
version = "0.1.0"
description = "Newsfeed: TechCrunch, Hacker News, Lobsters"
requires-python = ">=3.13"
dependencies = [
    "inloop-kit",
    "requests",
]

[project.entry-points."inloop.extensions"]
newsfeed = "newsfeed:EXTENSION"

[tool.uv.sources]
inloop-kit = { git = "https://github.com/vitalydolgov/inloop.git", subdirectory = "inloop_kit" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

